--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
   
 
   <!-- Behaviour -->
-  <script src="script.js"></script>
+  <script src="script1.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-database.js"></script>
+
 </body>
 </html>
