--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
   
 
   <!-- Behaviour -->
-  <script src="script1.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-database.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+  <!-- <script src="script1.js"></script> -->
+  <script type="module" src="script1.js"></script>
+
 
 </body>
 </html>
