--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <img src="edu-logo.png" alt="Left Logo" class="floating-logo left-logo">
 <img src="sp-logo.png" alt="Right Logo" class="floating-logo right-logo">
   <div class="content">
-    <h1 class="title">Stellar Space Quiz Prelims 1 <br> Leaderboard
+    <h1 class="title">Stellar Space Quiz 2025 <br> Grand Finale Leaderboard
       <div class="aurora">
         <div class="aurora__item"></div>
         <div class="aurora__item"></div>
