--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
 <body>
   <!-- Floating Logos -->
-<img src="edu-logo.png" alt="Left Logo" class="floating-logo left-logo">
-<img src="sp-logo.png" alt="Right Logo" class="floating-logo right-logo">
+<img src="qmup.png" alt="Left Logo" class="floating-logo left-logo">
+<img src="rvm-logo.png" alt="Right Logo" class="floating-logo right-logo">
   <div class="content">
-    <h1 class="title">Stellar Space Quiz 2025 <br> Grand Finale Leaderboard
+    <h1 class="title">Quiz Leaderboard
       <div class="aurora">
         <div class="aurora__item"></div>
         <div class="aurora__item"></div>
@@ -28,7 +28,7 @@
   </div>
 
   <!-- All team cards are injected here -->
-  <div class="scoreboard" id="scoreboard"> <img src="nsd-logo.png" alt="Center Logo" class="center-background-logo floating" />
+  <div class="scoreboard" id="scoreboard"> <img src="bg-rvm-logo.png" alt="Center Logo" class="center-background-logo floating" />
   </div>
     
   
@@ -38,7 +38,7 @@
   <audio id="ding-minus" src="ding-minus.mp3" preload="auto"></audio>
 
   <video autoplay muted loop id="bg-video">
-    <source src="bg-video.mp4" type="video/mp4" />
+    <source src="bg2-video.mp4" type="video/mp4" />
     Your browser does not support the video tag.
   </video>
   
