--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <body>
   <!-- Floating Logos -->
-<!-- <img src="qmup.png" alt="Left Logo" class="floating-logo left-logo">
-<img src="rvm-logo.png" alt="Right Logo" class="floating-logo right-logo"> -->
+<img src="qmup.png" alt="Left Logo" class="floating-logo left-logo">
+<img src="sp-logo.png" alt="Right Logo" class="floating-logo right-logo">
   <div class="content">
     <h1 class="title">Quiz Leaderboard
       <div class="aurora">
