--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
 <body>
   <!-- Floating Logos -->
-<img src="qmup.png" alt="Left Logo" class="floating-logo left-logo">
+<img src="edu-logo.png" alt="Left Logo" class="floating-logo left-logo">
 <img src="sp-logo.png" alt="Right Logo" class="floating-logo right-logo">
   <div class="content">
-    <h1 class="title">Quiz Leaderboard
+    <h1 class="title">Stellar Space Quiz 2025 <br> Leaderboard
       <div class="aurora">
         <div class="aurora__item"></div>
         <div class="aurora__item"></div>
